fix alignment

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -94,7 +94,7 @@
   }
 
   img {
-    max-width: 350px;
+    max-width: 280px;
     border-radius: 10%;
 
     @include breakpoint($large) {
